--- a/src/FoodProjectGalleryModel/FoodProjectGalleryModel/App.config
+++ b/src/FoodProjectGalleryModel/FoodProjectGalleryModel/App.config
@@ -17,4 +17,9 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+	<connectionStrings>
+		<add name="Context" 
+			 connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=FoodItemProject;Integrated Security=True;MultipleActiveResultSets=True"
+			 providerName="System.Data.SqlClient"/>
+	</connectionStrings>
 </configuration>
