--- a/src/FoodProjectGalleryModel/FoodProjectGalleryModel/FoodProjectGalleryModel.csproj
+++ b/src/FoodProjectGalleryModel/FoodProjectGalleryModel/FoodProjectGalleryModel.csproj
@@ -52,7 +52,9 @@
     <Compile Include="Context.cs" />
     <Compile Include="Models\FoodItem.cs" />
     <Compile Include="Models\Department.cs" />
+    <Compile Include="Models\FoodItemReciepe.cs" />
     <Compile Include="Models\Reciepe.cs" />
+    <Compile Include="Models\Role.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
